--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: testaa
+name: homecare_mobile
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,9 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.4.2
   get_it: ^8.2.0
-  drift: ^2.28.1
-  drift_flutter: ^0.2.6
+  drift: ^2.28.2
+  drift_flutter: ^0.2.7
   path_provider: ^2.1.5
+  dio: ^5.9.0
+  equatable: ^2.0.7
+  fpdart: ^1.1.1
+  auto_route: ^10.1.2
+  json_annotation: ^4.9.0
+  flutter_secure_storage: ^9.2.4
+  flutter_bloc: ^9.1.1
+  logger: ^2.6.1
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +59,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  drift_dev: ^2.28.2
-  build_runner: ^2.7.2
+  drift_dev: ^2.28.3
+  build_runner: ^2.7.1
+  json_serializable: ^6.11.1
+  auto_route_generator: ^10.2.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
