--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,13 @@ dependencies:
   dio: ^5.9.0
   equatable: ^2.0.7
   fpdart: ^1.1.1
-  auto_route: ^10.1.2
+  # auto_route: ^10.1.2
   json_annotation: ^4.9.0
   flutter_secure_storage: ^9.2.4
   flutter_bloc: ^9.1.1
   logger: ^2.6.1
   pretty_dio_logger: ^1.4.0
+  go_router: ^16.2.4
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +63,7 @@ dev_dependencies:
   drift_dev: ^2.28.3
   build_runner: ^2.7.1
   json_serializable: ^6.11.1
-  auto_route_generator: ^10.2.4
+  # auto_route_generator: ^10.2.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
