--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   logger: ^2.6.1
   pretty_dio_logger: ^1.4.0
   go_router: ^16.2.4
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
